@@ -1,3 +1,7 @@
+2018-04-01
+- Add program exit in nfx.c after panic with correupt data file
+- Add missing size check when reading nfdump 1.5.x common record blocks
+
 2018-02-11
 - Add missing json output format in nfdump help text
 - Add missing -v option in nfreplay help text
